add sync to database

--- a/Caist.Framework_Tools/Caist.Framework.Service/FrmMian.resx
+++ b/Caist.Framework_Tools/Caist.Framework.Service/FrmMian.resx
@@ -161,75 +161,6 @@
   <metadata name="SystemStatus.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>137, 17</value>
   </metadata>
-  <metadata name="PlcTool.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>384, 16</value>
-  </metadata>
-  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>687, 20</value>
-  </metadata>
-  <metadata name="SystemImage.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>253, 16</value>
-  </metadata>
-  <data name="SystemImage.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA4
-        DAAAAk1TRnQBSQFMAgEBBAEAAWgBAgFoAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AFQABtQHP
-        Da4BtQEADv8RABD/Ac8L/wP0Ac8BAAH/AfQBBwF0AUsERQFLAW4BkwHzAf8HAAj/AgABdA1MAXQB/wHP
-        Af8C9AERBfQB6QH0AvMB/wHPAQAB/wFLAXQBmQEbAZoBegFYAVIDTAFLAf8BAAf/ARoBdAFMAUsBdAH0
-        Af8CAAFMAZoMegFMAf8BtAH/AvQBEQX0AekD9AH/Ac8BAAH/AUsBmgHDAfYBoAF6AVkBUgJMAVIBSwH/
-        AQAC9AH/AfQB8AHvAf8BTAFSAVMBegFSAbwB/wIAAUwBmgtDAXoBTAH/AbQB/wL0AUMD9AFvA+kBbwH0
-        Af8BzwEAAf8BSwGaAvYBwwGaAXoBdAFMAlIBSwH/AQAB8wGRAosBtAGLAfQBmQFSAVMBegF0AZMB/wIA
-        AUwBmgFDAWYD/wVmAUMBegFMAf8BtAH/AvQBQwP0AekBbwFMAW8B6QH0Af8BtAEAAf8BTAGZAhoBdAJS
-        AUwBSwFMAVIBSwH/AQAB/wGRAQkBugG0AbMB8AEaAVICegGaAUwC/wEAAUwBmgEVCRIBFQF6AUwB/wG0
-        Af8BbQNDAW0B9AFFAW8BTAFvAekB9AH/AbQBAAH/AXQBmQEaAfYBwwGaAXoBdAJMAVIBdAH/AQAB/wK7
-        AdwCtAG7AfQBUgF0A0wB8wH/AQABUgGaARUJ6gEVAXoBTAH/AbQB/wEVA/QBQwH/AUYBFgJvAUUB9AH/
-        AbQBAAH/AUwBwwL2AcMBmgF6AXQCUgF0AUsB/wEAAf8B8QG0AQkBuwK0Af8BmQEaAfQB/wL0Af8BAAFS
-        AcMBFAFsAm0ErgJtARQBegFMAf8BtAH/ARUD/wEVAf8BRgEWAW8BFgFGAfQB/wG0AQAB/wFSAcMB9gH/
-        AcMBmgJ6AlIBegFLAf8BAAL/AbsCtAG1AfAC/wG8AXMBSgFJAXMB9AH/AXQBwwFmCa4BZgF6AVIB/wG0
-        Af8BFAP/ARUB/wFGAZMBbwGTAUYC/wG0AQAB/wF0AZoCGgF5AXQBUgNMAVIBSwH/AgAB/wL0Af8B9AEa
-        AZMB/wJQAVEBeQFQAbwB/wF0AcMBFAmuAWYBegFSAf8BtAH/AesDZgHrAf8BRgOUAUYC/wG0AQAB/wF0
-        AZkBGwH2AcMBmgF6AXkDUgF0Af8CAAH/AfQDRgFMAUUB/wEcAVABUQJ4ARwB/wF0AcMBZgmRAWYBegFS
-        Af8BtQP/AWYD/wFvA0YBbwL/AbQBAAH/AXQBwwH2Af8BwwGaAnoBUgF0AXoBTAH/AwAB/wFGAZoB4wEX
-        AUYC8AFQAVEBeAGZAUoB/wF0AcMLZgGaAXQB/wG1A/8BEwX/AUYE/wG0AQAB/wF0AcMB9gH/AcMBmgJ6
-        AnQBegFSAf8DAAH/AZMCdQEXAUYBkwH/BVAB8wF0AvYLwwF0Af8BtQP/ARIF/wFGBP8BtAEAAf8BdAb2
-        AsMBGgGaAVIB/wMAAf8BGgFvAZQBFgFvAUwB/wGZAfEB9AH/AvQBmQ10AZkB/wG1Dv8BtQEAAf8BeQGZ
-        ARoBGwH2A8MCmgGZAXQB/wQAAfYBkwFGAUwBkwEaBP8BABL/AbwOtQG8AQAC/wEaApkEdAKZARoB9AH/
-        BQAF/wcAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAL/AgABgAEBAv8EAAGA
-        AQEB/AEDBAABgAEBAQABAwQAAYABAQEAAQMEAAGAAQEBAAEDBAABgAEBAQABAQQAAYABAQEAAQEEAAGA
-        AQEBAAEBBAABgAEBBgABgAEBAYAFAAGAAQEBgAUAAYABAQHABQABgAEBAcAFAAGAAQEBwAUAAYABAQHg
-        AQQEAAGAAQEB8AF/Cw==
-</value>
-  </data>
   <metadata name="ImageDevice.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>469, 20</value>
   </metadata>
@@ -238,7 +169,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABE
-        CQAAAk1TRnQBSQFMAgEBAgEAATABAgEwAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAgEAAbABAgGwAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -333,20 +264,23 @@
         /4CKWdpPoSjuxaag1ZQAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>687, 20</value>
+  </metadata>
   <data name="webStart.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJJSURBVDhPpVNdTJJRGKYfMzMlbvKm2WpmrbVc41ILbyI2
-        t9I25wXV6qKwbNVywY1/SUS4QiqtNnNKOTD7N5ZNEhGH1QYLMZrRYhoX8YFAGD8Z6dM54dqclbSe7dm3
-        95z3ed7vnPc9rFksIlxKmEK4eDb+J6RIuxwQt1lGRA2P95A4lZAaJY3UWq0d770RXO4eRcUVk6FUoi6g
-        64RJGS2v6rAhGJ/BWHgaA84AqtuHIazr0fL2ybaQ/QWN0iTtVjCxGZg+xWHxxfE2GIfW7IZI2T+1u/Lu
-        tc35+7NJ3jLC3xqtqGyxwB3+jp6xr9B9iELnisL4MYaB8Sgudr9Dibg3tONQS03W+q2rST41mnPR6Sea
-        X8EZ/IYHzjC6RiPQOCahHg7hli2ETnsIaqsfFc0WFJZ3ureVKsuJhh7rF1aKVGa8ZqZw+80XtNkmccPy
-        GaqXAVww+iA1MGgY9OLq0AQUz9zgCjUgmoyENIGMAzIj9K4IGof8uGT2Q2Hy4ZzRi7rnHtT3MZDrPTio
-        fAHu3tZALl9WQzRpCWkCmWX1BtxzhCAnFWX9DM72ESH5yo0MDl+3Iq+4I5bDP9/Ezt6+juRT8ZzLZJdU
-        6XHTGkStnvlZVWrw4njrCPLLOqc3ChR3OJuKaDvTCZcQzpvUVUXip2gcnEB1rwcnNaPgHb2PDQKlIStP
-        WEj26XnpqP9xxDk7Tz2B5KELu07rkMNX2ddwjxSTdTYhfR8Lvo1MXvkj5AqaxtcWnDlGYg7hvF7/DfT3
-        aDVK2t+khf8JFusHfr4odkKfcp4AAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJJSURBVDhPpVNdTJJRGKYfMzMlbvKm2WpmrbVc41ILb0I2
+        t8w21wXV6qKwbNVywY1/SWS4QiqtNnNKOSD7N5dNEhGH1QYLMRrRYhoX8YFAGD8Z6dM54dqclbSe7dm3
+        95z3ed7vnPc9rFksIlxKmEK4eDb+J6RIu+wQt5tHRY2PS0icSkiNkkZqrcaG994ILnc7UHHFqC+TqAro
+        OmFSRsurOq0IxmcwFp7GoDOA6o4RCOt6Nbx9si1kf0GjNEmHBUxsBsZPcZh9cbwNxqExuSFSDEztqrx7
+        bXP+/mySt4zwt0YrKlvNcIe/o3fsK3o+RNHjisLwMYbB8Sgudr9DqbgvtONQa03W+q2rST41mnPR6Sda
+        XsEZ/IYHzjC6HBGo7ZNQjYRwyxqC1haCyuJHRYsZheVa97YyRTnR0GP9wkqR0oTXzBRuv/mCduskbpg/
+        Q/kygAsGH6R6Bo1DXlwdnoD8mRtcoRpEk5GQJpBxQGaAzhVB07Afl0x+yI0+nDN4Uffcg/p+Bg06Dw4q
+        XoC7py2Qy5fVEE1aQppA5t56Pe7ZQ2ggFWUDDM72EyH5NhgYHL5uQV5JZyyHf76Znb19Hcmn4jmXyS6t
+        0uGmJYhaHfOzqlTvxfG2UeQXaac3CuR3OJuKaTvTCZcQzpvUVcXip2gamkB1nwcn1Q7wjt7HBoFCn5Un
+        LCT79Lx01P844pydp55A8tCFotM9yOErbWu4R3aTdTYhfR8Lvo1MXvkj5Aqax9cWnDlGYg7hvF7/DfT3
+        aDVK2t+khf8JFusHZuEoZX3wiRoAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="webStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -381,7 +315,73 @@
         GAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="SystemImage.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>253, 16</value>
+  </metadata>
+  <data name="SystemImage.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA4
+        DAAAAk1TRnQBSQFMAgEBBAEAAegBAgHoAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AFQABtQHP
+        Da4BtQEADv8RABD/Ac8L/wP0Ac8BAAH/AfQBBwF0AUsERQFLAW4BkwHzAf8HAAj/AgABdA1MAXQB/wHP
+        Af8C9AERBfQB6QH0AvMB/wHPAQAB/wFLAXQBmQEbAZoBegFYAVIDTAFLAf8BAAf/ARoBdAFMAUsBdAH0
+        Af8CAAFMAZoMegFMAf8BtAH/AvQBEQX0AekD9AH/Ac8BAAH/AUsBmgHDAfYBoAF6AVkBUgJMAVIBSwH/
+        AQAC9AH/AfQB8AHvAf8BTAFSAVMBegFSAbwB/wIAAUwBmgtDAXoBTAH/AbQB/wL0AUMD9AFvA+kBbwH0
+        Af8BzwEAAf8BSwGaAvYBwwGaAXoBdAFMAlIBSwH/AQAB8wGRAosBtAGLAfQBmQFSAVMBegF0AZMB/wIA
+        AUwBmgFDAWYD/wVmAUMBegFMAf8BtAH/AvQBQwP0AekBbwFMAW8B6QH0Af8BtAEAAf8BTAGZAhoBdAJS
+        AUwBSwFMAVIBSwH/AQAB/wGRAQkBugG0AbMB8AEaAVICegGaAUwC/wEAAUwBmgEVCRIBFQF6AUwB/wG0
+        Af8BbQNDAW0B9AFFAW8BTAFvAekB9AH/AbQBAAH/AXQBmQEaAfYBwwGaAXoBdAJMAVIBdAH/AQAB/wK7
+        AdwCtAG7AfQBUgF0A0wB8wH/AQABUgGaARUJ6gEVAXoBTAH/AbQB/wEVA/QBQwH/AUYBFgJvAUUB9AH/
+        AbQBAAH/AUwBwwL2AcMBmgF6AXQCUgF0AUsB/wEAAf8B8QG0AQkBuwK0Af8BmQEaAfQB/wL0Af8BAAFS
+        AcMBFAFsAm0ErgJtARQBegFMAf8BtAH/ARUD/wEVAf8BRgEWAW8BFgFGAfQB/wG0AQAB/wFSAcMB9gH/
+        AcMBmgJ6AlIBegFLAf8BAAL/AbsCtAG1AfAC/wG8AXMBSgFJAXMB9AH/AXQBwwFmCa4BZgF6AVIB/wG0
+        Af8BFAP/ARUB/wFGAZMBbwGTAUYC/wG0AQAB/wF0AZoCGgF5AXQBUgNMAVIBSwH/AgAB/wL0Af8B9AEa
+        AZMB/wJQAVEBeQFQAbwB/wF0AcMBFAmuAWYBegFSAf8BtAH/AesDZgHrAf8BRgOUAUYC/wG0AQAB/wF0
+        AZkBGwH2AcMBmgF6AXkDUgF0Af8CAAH/AfQDRgFMAUUB/wEcAVABUQJ4ARwB/wF0AcMBZgmRAWYBegFS
+        Af8BtQP/AWYD/wFvA0YBbwL/AbQBAAH/AXQBwwH2Af8BwwGaAnoBUgF0AXoBTAH/AwAB/wFGAZoB4wEX
+        AUYC8AFQAVEBeAGZAUoB/wF0AcMLZgGaAXQB/wG1A/8BEwX/AUYE/wG0AQAB/wF0AcMB9gH/AcMBmgJ6
+        AnQBegFSAf8DAAH/AZMCdQEXAUYBkwH/BVAB8wF0AvYLwwF0Af8BtQP/ARIF/wFGBP8BtAEAAf8BdAb2
+        AsMBGgGaAVIB/wMAAf8BGgFvAZQBFgFvAUwB/wGZAfEB9AH/AvQBmQ10AZkB/wG1Dv8BtQEAAf8BeQGZ
+        ARoBGwH2A8MCmgGZAXQB/wQAAfYBkwFGAUwBkwEaBP8BABL/AbwOtQG8AQAC/wEaApkEdAKZARoB9AH/
+        BQAF/wcAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAL/AgABgAEBAv8EAAGA
+        AQEB/AEDBAABgAEBAQABAwQAAYABAQEAAQMEAAGAAQEBAAEDBAABgAEBAQABAQQAAYABAQEAAQEEAAGA
+        AQEBAAEBBAABgAEBBgABgAEBAYAFAAGAAQEBgAUAAYABAQHABQABgAEBAcAFAAGAAQEBwAUAAYABAQHg
+        AQQEAAGAAQEB8AF/Cw==
+</value>
+  </data>
   <metadata name="timing.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>597, 20</value>
+  </metadata>
+  <metadata name="timerWebSocket.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 59</value>
   </metadata>
 </root>
