--- a/Caist.Framework_Tools/Caist.Framework.Service/FrmMian.resx
+++ b/Caist.Framework_Tools/Caist.Framework.Service/FrmMian.resx
@@ -169,7 +169,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABE
-        CQAAAk1TRnQBSQFMAgEBAgEAAbABAgGwAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CQAAAk1TRnQBSQFMAgEBAgEAAcgBAgHIAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -270,17 +270,17 @@
   <data name="webStart.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJJSURBVDhPpVNdTJJRGKYfMzMlbvKm2WpmrbVc41ILb0I2
-        t8w21wXV6qKwbNVywY1/SWS4QiqtNnNKOSD7N5dNEhGH1QYLMRrRYhoX8YFAGD8Z6dM54dqclbSe7dm3
-        95z3ed7vnPc9rFksIlxKmEK4eDb+J6RIu+wQt5tHRY2PS0icSkiNkkZqrcaG994ILnc7UHHFqC+TqAro
-        OmFSRsurOq0IxmcwFp7GoDOA6o4RCOt6Nbx9si1kf0GjNEmHBUxsBsZPcZh9cbwNxqExuSFSDEztqrx7
-        bXP+/mySt4zwt0YrKlvNcIe/o3fsK3o+RNHjisLwMYbB8Sgudr9DqbgvtONQa03W+q2rST41mnPR6Sda
-        XsEZ/IYHzjC6HBGo7ZNQjYRwyxqC1haCyuJHRYsZheVa97YyRTnR0GP9wkqR0oTXzBRuv/mCduskbpg/
-        Q/kygAsGH6R6Bo1DXlwdnoD8mRtcoRpEk5GQJpBxQGaAzhVB07Afl0x+yI0+nDN4Uffcg/p+Bg06Dw4q
-        XoC7py2Qy5fVEE1aQppA5t56Pe7ZQ2ggFWUDDM72EyH5NhgYHL5uQV5JZyyHf76Znb19Hcmn4jmXyS6t
-        0uGmJYhaHfOzqlTvxfG2UeQXaac3CuR3OJuKaTvTCZcQzpvUVcXip2gamkB1nwcn1Q7wjt7HBoFCn5Un
-        LCT79Lx01P844pydp55A8tCFotM9yOErbWu4R3aTdTYhfR8Lvo1MXvkj5Aqax9cWnDlGYg7hvF7/DfT3
-        aDVK2t+khf8JFusHZuEoZX3wiRoAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJKSURBVDhPpVNdTJJRGKYfMzMlbvKm2WpmrbVc41ILL4rY
+        3DLbXBdUq4uCslXLBTf+pRHhCqm02swp5YDs31g2SUQcVhssxGhki2lcxAciYfxkpE/nhGtzVtJ6tmff
+        3nPe53m/c973sGawgHAxYQrhwpn4n5BS1+GEpNU6JKp/XEziVEJqlDRSq7UOvPdFcLnThbIrZmOpVF1A
+        1wmTMlpa0W5HMD6NkfAU+obHUdk2CGFNl5a3T7aJ7M9rlCZts4GJTcP8KQ6rP463wTi0Fg9Eyt7JXeV3
+        r23M359N8pYQ/tZoWXmzFZ7wd3SNfIX+QxR6dxSmjzH0jUZxsfMdSiTdoW2Hmquy1m5eSfKp0ayLTj/R
+        9ArDwW94MBxGhysCjXMC6sEQbtlD0DlCUNsCKGuyolCs82wpVYqJhh7rF5aLVBa8ZiZx+80XtNoncMP6
+        GaqX47hg8qPOyKC+34erA2NQPPOAK9SAaDIS0gQyDshMMLgjaBgI4JIlAIXZj3MmH2qee1Hbw0Bu8OKg
+        8gW4e1rGc/myKqJJS0gTyNxba8Q9ZwhyUlHWy+BsDxGSr9zE4PB1G/KK22M5/PON7Oyta0g+Fc+6THZJ
+        hQE3bUFUG5ifVeuMPhxvGUL+dt3UeoHiDmdDEW1nOuEiwjmTuqJI8hQN/WOo7PbipMYF3tH7WCdQGrPy
+        hIVkn56XjvofR5yz49QTSB+6sfO0Hjl8lWMV98huss4mpO9j3reRyRM/Qq6gcXR1wZljJOYQzun130B/
+        j1ajpP1NWvifYLF+AGK1KGJdM9ymAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="webStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -322,60 +322,60 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA4
-        DAAAAk1TRnQBSQFMAgEBBAEAAegBAgHoAQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AFQABtQHP
-        Da4BtQEADv8RABD/Ac8L/wP0Ac8BAAH/AfQBBwF0AUsERQFLAW4BkwHzAf8HAAj/AgABdA1MAXQB/wHP
-        Af8C9AERBfQB6QH0AvMB/wHPAQAB/wFLAXQBmQEbAZoBegFYAVIDTAFLAf8BAAf/ARoBdAFMAUsBdAH0
-        Af8CAAFMAZoMegFMAf8BtAH/AvQBEQX0AekD9AH/Ac8BAAH/AUsBmgHDAfYBoAF6AVkBUgJMAVIBSwH/
-        AQAC9AH/AfQB8AHvAf8BTAFSAVMBegFSAbwB/wIAAUwBmgtDAXoBTAH/AbQB/wL0AUMD9AFvA+kBbwH0
-        Af8BzwEAAf8BSwGaAvYBwwGaAXoBdAFMAlIBSwH/AQAB8wGRAosBtAGLAfQBmQFSAVMBegF0AZMB/wIA
-        AUwBmgFDAWYD/wVmAUMBegFMAf8BtAH/AvQBQwP0AekBbwFMAW8B6QH0Af8BtAEAAf8BTAGZAhoBdAJS
-        AUwBSwFMAVIBSwH/AQAB/wGRAQkBugG0AbMB8AEaAVICegGaAUwC/wEAAUwBmgEVCRIBFQF6AUwB/wG0
-        Af8BbQNDAW0B9AFFAW8BTAFvAekB9AH/AbQBAAH/AXQBmQEaAfYBwwGaAXoBdAJMAVIBdAH/AQAB/wK7
-        AdwCtAG7AfQBUgF0A0wB8wH/AQABUgGaARUJ6gEVAXoBTAH/AbQB/wEVA/QBQwH/AUYBFgJvAUUB9AH/
-        AbQBAAH/AUwBwwL2AcMBmgF6AXQCUgF0AUsB/wEAAf8B8QG0AQkBuwK0Af8BmQEaAfQB/wL0Af8BAAFS
-        AcMBFAFsAm0ErgJtARQBegFMAf8BtAH/ARUD/wEVAf8BRgEWAW8BFgFGAfQB/wG0AQAB/wFSAcMB9gH/
-        AcMBmgJ6AlIBegFLAf8BAAL/AbsCtAG1AfAC/wG8AXMBSgFJAXMB9AH/AXQBwwFmCa4BZgF6AVIB/wG0
-        Af8BFAP/ARUB/wFGAZMBbwGTAUYC/wG0AQAB/wF0AZoCGgF5AXQBUgNMAVIBSwH/AgAB/wL0Af8B9AEa
-        AZMB/wJQAVEBeQFQAbwB/wF0AcMBFAmuAWYBegFSAf8BtAH/AesDZgHrAf8BRgOUAUYC/wG0AQAB/wF0
-        AZkBGwH2AcMBmgF6AXkDUgF0Af8CAAH/AfQDRgFMAUUB/wEcAVABUQJ4ARwB/wF0AcMBZgmRAWYBegFS
-        Af8BtQP/AWYD/wFvA0YBbwL/AbQBAAH/AXQBwwH2Af8BwwGaAnoBUgF0AXoBTAH/AwAB/wFGAZoB4wEX
-        AUYC8AFQAVEBeAGZAUoB/wF0AcMLZgGaAXQB/wG1A/8BEwX/AUYE/wG0AQAB/wF0AcMB9gH/AcMBmgJ6
-        AnQBegFSAf8DAAH/AZMCdQEXAUYBkwH/BVAB8wF0AvYLwwF0Af8BtQP/ARIF/wFGBP8BtAEAAf8BdAb2
-        AsMBGgGaAVIB/wMAAf8BGgFvAZQBFgFvAUwB/wGZAfEB9AH/AvQBmQ10AZkB/wG1Dv8BtQEAAf8BeQGZ
-        ARoBGwH2A8MCmgGZAXQB/wQAAfYBkwFGAUwBkwEaBP8BABL/AbwOtQG8AQAC/wEaApkEdAKZARoB9AH/
-        BQAF/wcAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAL/AgABgAEBAv8EAAGA
-        AQEB/AEDBAABgAEBAQABAwQAAYABAQEAAQMEAAGAAQEBAAEDBAABgAEBAQABAQQAAYABAQEAAQEEAAGA
-        AQEBAAEBBAABgAEBBgABgAEBAYAFAAGAAQEBgAUAAYABAQHABQABgAEBAcAFAAGAAQEBwAUAAYABAQHg
-        AQQEAAGAAQEB8AF/Cw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA2
+        DAAAAk1TRnQBSQFMAgEBBAIAAQMBAAEDARABAAEQAQAE/wEJAQAI/wFCAU0BNgEEBgABNgEEAgABKAMA
+        AUADAAEgAwABAQEAAQgGAAEIGAABgAIAAYADAAKAAQABgAMAAYABAAGAAQACgAIAA8ABAAHAAdwBwAEA
+        AfABygGmAQABMwUAATMBAAEzAQABMwEAAjMCAAMWAQADHAEAAyIBAAMpAQADVQEAA00BAANCAQADOQEA
+        AYABfAH/AQACUAH/AQABkwEAAdYBAAH/AewBzAEAAcYB1gHvAQAB1gLnAQABkAGpAa0CAAH/ATMDAAFm
+        AwABmQMAAcwCAAEzAwACMwIAATMBZgIAATMBmQIAATMBzAIAATMB/wIAAWYDAAFmATMCAAJmAgABZgGZ
+        AgABZgHMAgABZgH/AgABmQMAAZkBMwIAAZkBZgIAApkCAAGZAcwCAAGZAf8CAAHMAwABzAEzAgABzAFm
+        AgABzAGZAgACzAIAAcwB/wIAAf8BZgIAAf8BmQIAAf8BzAEAATMB/wIAAf8BAAEzAQABMwEAAWYBAAEz
+        AQABmQEAATMBAAHMAQABMwEAAf8BAAH/ATMCAAMzAQACMwFmAQACMwGZAQACMwHMAQACMwH/AQABMwFm
+        AgABMwFmATMBAAEzAmYBAAEzAWYBmQEAATMBZgHMAQABMwFmAf8BAAEzAZkCAAEzAZkBMwEAATMBmQFm
+        AQABMwKZAQABMwGZAcwBAAEzAZkB/wEAATMBzAIAATMBzAEzAQABMwHMAWYBAAEzAcwBmQEAATMCzAEA
+        ATMBzAH/AQABMwH/ATMBAAEzAf8BZgEAATMB/wGZAQABMwH/AcwBAAEzAv8BAAFmAwABZgEAATMBAAFm
+        AQABZgEAAWYBAAGZAQABZgEAAcwBAAFmAQAB/wEAAWYBMwIAAWYCMwEAAWYBMwFmAQABZgEzAZkBAAFm
+        ATMBzAEAAWYBMwH/AQACZgIAAmYBMwEAA2YBAAJmAZkBAAJmAcwBAAFmAZkCAAFmAZkBMwEAAWYBmQFm
+        AQABZgKZAQABZgGZAcwBAAFmAZkB/wEAAWYBzAIAAWYBzAEzAQABZgHMAZkBAAFmAswBAAFmAcwB/wEA
+        AWYB/wIAAWYB/wEzAQABZgH/AZkBAAFmAf8BzAEAAcwBAAH/AQAB/wEAAcwBAAKZAgABmQEzAZkBAAGZ
+        AQABmQEAAZkBAAHMAQABmQMAAZkCMwEAAZkBAAFmAQABmQEzAcwBAAGZAQAB/wEAAZkBZgIAAZkBZgEz
+        AQABmQEzAWYBAAGZAWYBmQEAAZkBZgHMAQABmQEzAf8BAAKZATMBAAKZAWYBAAOZAQACmQHMAQACmQH/
+        AQABmQHMAgABmQHMATMBAAFmAcwBZgEAAZkBzAGZAQABmQLMAQABmQHMAf8BAAGZAf8CAAGZAf8BMwEA
+        AZkBzAFmAQABmQH/AZkBAAGZAf8BzAEAAZkC/wEAAcwDAAGZAQABMwEAAcwBAAFmAQABzAEAAZkBAAHM
+        AQABzAEAAZkBMwIAAcwCMwEAAcwBMwFmAQABzAEzAZkBAAHMATMBzAEAAcwBMwH/AQABzAFmAgABzAFm
+        ATMBAAGZAmYBAAHMAWYBmQEAAcwBZgHMAQABmQFmAf8BAAHMAZkCAAHMAZkBMwEAAcwBmQFmAQABzAKZ
+        AQABzAGZAcwBAAHMAZkB/wEAAswCAALMATMBAALMAWYBAALMAZkBAAPMAQACzAH/AQABzAH/AgABzAH/
+        ATMBAAGZAf8BZgEAAcwB/wGZAQABzAH/AcwBAAHMAv8BAAHMAQABMwEAAf8BAAFmAQAB/wEAAZkBAAHM
+        ATMCAAH/AjMBAAH/ATMBZgEAAf8BMwGZAQAB/wEzAcwBAAH/ATMB/wEAAf8BZgIAAf8BZgEzAQABzAJm
+        AQAB/wFmAZkBAAH/AWYBzAEAAcwBZgH/AQAB/wGZAgAB/wGZATMBAAH/AZkBZgEAAf8CmQEAAf8BmQHM
+        AQAB/wGZAf8BAAH/AcwCAAH/AcwBMwEAAf8BzAFmAQAB/wHMAZkBAAH/AswBAAH/AcwB/wEAAv8BMwEA
+        AcwB/wFmAQAC/wGZAQAC/wHMAQACZgH/AQABZgH/AWYBAAFmAv8BAAH/AmYBAAH/AWYB/wEAAv8BZgEA
+        ASEBAAGlAQADXwEAA3cBAAOGAQADlgEAA8sBAAOyAQAD1wEAA90BAAPjAQAD6gEAA/EBAAP4AQAB8AH7
+        Af8BAAGkAqABAAOAAwAB/wIAAf8DAAL/AQAB/wMAAf8BAAH/AQAC/wIAA///AP8A/wD/ABUAAbUBzw2u
+        AbUBAA7/EQAQ/wHPC/8D9AHPAQAB/wH0AQcBdAFLBEUBSwFuAZMB8wH/BwAI/wIAAXQNTAF0Af8BzwH/
+        AvQBEQX0AekB9ALzAf8BzwEAAf8BSwF0AZkBGwGaAXoBWAFSA0wBSwH/AQAH/wEaAXQBTAFLAXQB9AH/
+        AgABTAGaDHoBTAH/AbQB/wL0AREF9AHpA/QB/wHPAQAB/wFLAZoBwwH2AaABegFZAVICTAFSAUsB/wEA
+        AvQB/wH0AfAB7wH/AUwBUgFTAXoBUgG8Af8CAAFMAZoLQwF6AUwB/wG0Af8C9AFDA/QBbwPpAW8B9AH/
+        Ac8BAAH/AUsBmgL2AcMBmgF6AXQBTAJSAUsB/wEAAfMBkQKLAbQBiwH0AZkBUgFTAXoBdAGTAf8CAAFM
+        AZoBQwFmA/8FZgFDAXoBTAH/AbQB/wL0AUMD9AHpAW8BTAFvAekB9AH/AbQBAAH/AUwBmQIaAXQCUgFM
+        AUsBTAFSAUsB/wEAAf8BkQEJAboBtAGzAfABGgFSAnoBmgFMAv8BAAFMAZoBFQkSARUBegFMAf8BtAH/
+        AW0DQwFtAfQBRQFvAUwBbwHpAfQB/wG0AQAB/wF0AZkBGgH2AcMBmgF6AXQCTAFSAXQB/wEAAf8CuwHc
+        ArQBuwH0AVIBdANMAfMB/wEAAVIBmgEVCeoBFQF6AUwB/wG0Af8BFQP0AUMB/wFGARYCbwFFAfQB/wG0
+        AQAB/wFMAcMC9gHDAZoBegF0AlIBdAFLAf8BAAH/AfEBtAEJAbsCtAH/AZkBGgH0Af8C9AH/AQABUgHD
+        ARQBbAJtBK4CbQEUAXoBTAH/AbQB/wEVA/8BFQH/AUYBFgFvARYBRgH0Af8BtAEAAf8BUgHDAfYB/wHD
+        AZoCegJSAXoBSwH/AQAC/wG7ArQBtQHwAv8BvAFzAUoBSQFzAfQB/wF0AcMBZgmuAWYBegFSAf8BtAH/
+        ARQD/wEVAf8BRgGTAW8BkwFGAv8BtAEAAf8BdAGaAhoBeQF0AVIDTAFSAUsB/wIAAf8C9AH/AfQBGgGT
+        Af8CUAFRAXkBUAG8Af8BdAHDARQJrgFmAXoBUgH/AbQB/wHrA2YB6wH/AUYDlAFGAv8BtAEAAf8BdAGZ
+        ARsB9gHDAZoBegF5A1IBdAH/AgAB/wH0A0YBTAFFAf8BHAFQAVECeAEcAf8BdAHDAWYJkQFmAXoBUgH/
+        AbUD/wFmA/8BbwNGAW8C/wG0AQAB/wF0AcMB9gH/AcMBmgJ6AVIBdAF6AUwB/wMAAf8BRgGaAeMBFwFG
+        AvABUAFRAXgBmQFKAf8BdAHDC2YBmgF0Af8BtQP/ARMF/wFGBP8BtAEAAf8BdAHDAfYB/wHDAZoCegJ0
+        AXoBUgH/AwAB/wGTAnUBFwFGAZMB/wVQAfMBdAL2C8MBdAH/AbUD/wESBf8BRgT/AbQBAAH/AXQG9gLD
+        ARoBmgFSAf8DAAH/ARoBbwGUARYBbwFMAf8BmQHxAfQB/wL0AZkNdAGZAf8BtQ7/AbUBAAH/AXkBmQEa
+        ARsB9gPDApoBmQF0Af8EAAH2AZMBRgFMAZMBGgT/AQAS/wG8DrUBvAEAAv8BGgKZBHQCmQEaAfQB/wUA
+        Bf8HAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/gQAC/wIAAYABAQL/BAABgAEB
+        AfwBAwQAAYABAQEAAQMEAAGAAQEBAAEDBAABgAEBAQABAwQAAYABAQEAAQEEAAGAAQEBAAEBBAABgAEB
+        AQABAQQAAYABAQYAAYABAQGABQABgAEBAYAFAAGAAQEBwAUAAYABAQHABQABgAEBAcAFAAGAAQEB4AEE
+        BAABgAEBAfABfws=
 </value>
   </data>
   <metadata name="timing.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -383,5 +383,8 @@
   </metadata>
   <metadata name="timerWebSocket.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 59</value>
+  </metadata>
+  <metadata name="timerSyncData.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>159, 59</value>
   </metadata>
 </root>
